istioStudy/trafficManagement/example.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
       number: 80
       name: http
       protocol: HTTP
      hosts:
      - "*.microservice.rocks"
      - "*.microservice.xyz"
