istioStudy/trafficManagement/flaskapp.virtualservice-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp
spec:
  hosts:
  - "flaskapp.microservice.rocks"
  gateways:
  - mesh
  - example-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        prefix: /env
    - uri:
        prefix: /fetch
    route:
    - destination:
        host: flaskapp.default.svc.cluster.local
        subset: v2
