istioStudy/trafficManagement/flaskapp.virtualservice.copy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp-mirror
spec:
  hosts:
  - "flaskapp.default.svc.cluster.local"
  http:
    - route:
      - destination:
         host: flaskapp.default.svc.cluster.local
         subset: v1
      mirror:
        host: flaskapp.default.svc.cluster.local
        subset: v2
