istioStudy/trafficManagement/flaskapp.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp
spec:
  hosts:
  - flaskapp.default.svc.cluster.local
  http:
  - route:
    - destination:
       host: flaskapp.default.svc.cluster.local
       subset: v1
      weight: 70
    - destination:
       host: flaskapp.default.svc.cluster.local
       subset: v2
      weight: 30
