istioStudy/trafficManagement/httpbin.virtualservice-gateway-delayInjected.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService 
metadata:
  name: httpbin 
spec:
  hosts:
  - "httpbin.default.svc.cluster.local"
  - "httpbin.microservice.rocks"
  gateways:
  - mesh
  - httpbin-gateway
  http:
#  - match:
#    - uri:
#        prefix: /
#    - uri:
#        prefix: /status
#    - uri:
#        prefix: /delay
    - timeout: 2s
      route:
        - destination:
            port:
              number: 8000
            host: httpbin
      fault:
        delay:
          fixedDelay: 3s
          percent: 100
