istioStudy/trafficManagement/httpbin.virtualservice-gateway.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService 
metadata:
  name: httpbin 
spec:
  hosts:
  - "httpbin.microservice.rocks"
  gateways:
  - mesh
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /
#    - uri:
#        prefix: /status
#    - uri:
#        prefix: /delay
    route:
    - destination:
        port:
          number: 8000 
        host: httpbin
